8376472: Shenandoah: Assembler store barriers read destination memory despite the decorators

Reviewed-by: mdoerr, wkemper